# ccstat

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md  USAGE.md  design-plan.md  requirements.md  tasks.md
.github/workflows/: ci.yml  docker.yml  release.yml
benches/: README.md  aggregation.rs  cost_calculation.rs  parsing.rs  usage_benchmarks.rs
completions/: ccstat.bash  ccstat.zsh
crates/ccstat-core/: Cargo.toml
crates/ccstat-core/src/: aggregation_types.rs  error.rs  filters.rs  lib.rs  memory_pool.rs  model_formatter.rs  provider.rs  test_utils.rs  types.rs
crates/ccstat-mcp/: Cargo.toml
crates/ccstat-mcp/src/: lib.rs
crates/ccstat-pricing/: Cargo.toml
crates/ccstat-pricing/embedded/: pricing.json
crates/ccstat-pricing/src/: cost_calculator.rs  lib.rs  pricing_fetcher.rs
crates/ccstat-provider-amp/: Cargo.toml
crates/ccstat-provider-amp/src/: data_loader.rs  lib.rs
crates/ccstat-provider-claude/: Cargo.toml
crates/ccstat-provider-claude/src/: data_loader.rs  lib.rs
crates/ccstat-provider-codex/: Cargo.toml
crates/ccstat-provider-codex/src/: data_loader.rs  lib.rs
crates/ccstat-provider-opencode/: Cargo.toml
crates/ccstat-provider-opencode/src/: data_loader.rs  lib.rs
crates/ccstat-provider-pi/: Cargo.toml
crates/ccstat-provider-pi/src/: data_loader.rs  lib.rs
crates/ccstat-terminal/: Cargo.toml
crates/ccstat-terminal/src/: blocks_monitor.rs  lib.rs  output.rs
embedded/: pricing.json
examples/: basic_usage.rs  custom_filter.rs  json_export.rs
scripts/: build-releases.sh  coverage.sh  cross-platform-test.ps1  cross-platform-test.sh  generate-test-data.sh  memory-test.sh  validate-parity.sh
src/: aggregation.rs  blocks_monitor.rs  cli.rs  commands.rs  cost_calculator.rs  data_loader.rs  error.rs  filters.rs  lib.rs  live_monitor.rs  main.rs  mcp.rs  memory_pool.rs  model_formatter.rs  output.rs  pricing_fetcher.rs  statusline.rs  string_pool.rs  timezone.rs  types.rs
tests/: cli_simple_test.rs  commands_test.rs  end_to_end_test.rs  fixtures.rs  fixtures_test.rs  integration_test.rs  isolated_dedup_test.rs  main_integration_test.rs  mcp_server_test.rs  mod.rs  proptest_test.proptest-regressions  proptest_test.rs
tests/common/: mod.rs
