[package]
name = "ccstat"
version = "0.1.0"
edition = "2024"
authors = ["hydai"]
description = "Analyze Claude Code usage data from local JSONL files"
repository = "https://github.com/hydai/ccstat"
license = "MIT"
readme = "README.md"
keywords = ["claude", "usage", "cli", "cost", "analysis"]
categories = ["command-line-utilities"]

[dependencies]
# Core
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
prettytable-rs = "0.10"

# Async
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
async-stream = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }
warp = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP/JSON-RPC
jsonrpc-core = "18.0"
jsonrpc-core-client = "18.0"

# Performance
smallvec = "1.13"
typed-arena = "2.0"
rayon = "1.10"
string-interner = "0.17"

# Utils
dirs = "5.0"
derive_more = "0.99"
indicatif = "0.17"
atty = "0.2"
notify = "6.1"
once_cell = "1.19"
walkdir = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.13"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tokio-test = "0.4"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "aggregation"
harness = false

[[bench]]
name = "cost_calculation"
harness = false

[[bench]]
name = "usage_benchmarks"
harness = false

[[example]]
name = "basic_usage"

[[example]]
name = "custom_filter"

[[example]]
name = "json_export"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
