[package]
name = "ccstat"
version = "0.4.0"
edition = "2024"
authors = ["hydai"]
description = "Analyze Claude Code usage data from local JSONL files"
repository = "https://github.com/hydai/ccstat"
license = "MIT"
readme = "README.md"
keywords = ["claude", "usage", "cli", "cost", "analysis"]
categories = ["command-line-utilities"]

[dependencies]
# Core
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
prettytable-rs = "0.10"
colored = "2.1"
terminal_size = "0.4"
console = "0.16"

# Async
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
async-stream = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Performance
smallvec = "1.13"
typed-arena = "2.0"
rayon = "1.10"
string-interner = "0.19"

# Utils
dirs = "6.0"
derive_more = { version = "2.0", features = ["display", "from", "error"] }
indicatif = "0.18"
is-terminal = "0.4"
notify = "8.1"
once_cell = "1.19"
walkdir = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.13"
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.5"
tokio-test = "0.4"
filetime = "0.2"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "aggregation"
harness = false

[[bench]]
name = "cost_calculation"
harness = false

[[bench]]
name = "usage_benchmarks"
harness = false

[[example]]
name = "basic_usage"

[[example]]
name = "custom_filter"

[[example]]
name = "json_export"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
