[workspace]
members = [
    "crates/ccstat-core",
    "crates/ccstat-pricing",
    "crates/ccstat-terminal",
    "crates/ccstat-provider-claude",
    "crates/ccstat-provider-codex",
    "crates/ccstat-provider-opencode",
    "crates/ccstat-provider-amp",
    "crates/ccstat-provider-pi",
    "crates/ccstat-mcp",
]
resolver = "3"

[workspace.package]
version = "0.6.1"
edition = "2024"
authors = ["hydai"]
license = "MIT"
repository = "https://github.com/hydai/ccstat"

[workspace.dependencies]
# Internal crates
ccstat-core = { version = "0.6.1", path = "crates/ccstat-core" }
ccstat-pricing = { version = "0.6.1", path = "crates/ccstat-pricing" }
ccstat-terminal = { version = "0.6.1", path = "crates/ccstat-terminal" }
ccstat-provider-claude = { version = "0.6.1", path = "crates/ccstat-provider-claude" }
ccstat-provider-codex = { version = "0.6.1", path = "crates/ccstat-provider-codex" }
ccstat-provider-opencode = { version = "0.6.1", path = "crates/ccstat-provider-opencode" }
ccstat-provider-amp = { version = "0.6.1", path = "crates/ccstat-provider-amp" }
ccstat-provider-pi = { version = "0.6.1", path = "crates/ccstat-provider-pi" }
ccstat-mcp = { version = "0.6.1", path = "crates/ccstat-mcp" }

# Core
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
prettytable-rs = "0.10"
colored = "3.1"
terminal_size = "0.4"
console = "0.16"

# Async
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
async-stream = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.13", features = ["json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Performance
smallvec = "1.13"
typed-arena = "2.0"
rayon = "1.10"
string-interner = "0.19"

# Utils
dirs = "6.0"
derive_more = { version = "2.0", features = ["display", "from", "error"] }
indicatif = "0.18"
is-terminal = "0.4"
notify = "8.1"
once_cell = "1.19"
walkdir = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Dev/Test
tempfile = "3.13"
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.5"
tokio-test = "0.4"
filetime = "0.2"

[package]
name = "ccstat"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Analyze Claude Code usage data from local JSONL files"
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["claude", "usage", "cli", "cost", "analysis"]
categories = ["command-line-utilities"]

[dependencies]
# Internal crates
ccstat-core = { workspace = true }
ccstat-pricing = { workspace = true }
ccstat-terminal = { workspace = true }
ccstat-provider-claude = { workspace = true }
ccstat-provider-codex = { workspace = true }
ccstat-provider-opencode = { workspace = true }
ccstat-provider-amp = { workspace = true }
ccstat-provider-pi = { workspace = true }

# Core
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
iana-time-zone = { workspace = true }

# CLI
clap = { workspace = true }
prettytable-rs = { workspace = true }
colored = { workspace = true }
terminal_size = { workspace = true }
console = { workspace = true }

# Async
futures = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Performance
smallvec = { workspace = true }
typed-arena = { workspace = true }
rayon = { workspace = true }
string-interner = { workspace = true }

# Utils
dirs = { workspace = true }
derive_more = { workspace = true }
indicatif = { workspace = true }
is-terminal = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
tokio-test = { workspace = true }
filetime = { workspace = true }

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "aggregation"
harness = false

[[bench]]
name = "cost_calculation"
harness = false

[[bench]]
name = "usage_benchmarks"
harness = false

[[example]]
name = "basic_usage"

[[example]]
name = "custom_filter"

[[example]]
name = "json_export"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
