[package]
name = "ccstat-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and utilities for ccstat"

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
iana-time-zone = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
smallvec = { workspace = true }
rayon = { workspace = true }
string-interner = { workspace = true }
typed-arena = { workspace = true }
indicatif = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
